<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hesai_worker</name>
  <version>1.0.0</version>
  <description>Hesai XT32M2X LiDAR raw PCAP recorder as a ROS 2 lifecycle node</description>
  <maintainer email="dev@citylogix.com">CITYLOGIX</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>diagnostic_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
